--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".List.BookActivity">
+        <activity android:name="com.example.softspec.ebookapp.List.BookActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
